# ax-box

./: CMakeLists.txt  README.md  build_ffmpeg.sh  build_glog.sh  build_jsoncpp.sh  build_ncnn.sh  build_opencv.sh  config.json
include/: LimitedQueue.h  app.h  node.h  node_factory.h  packet.h
include/apps/: detect_demo.h  rtsp_demo.h
include/model/: model_base.h  model_factory.cpp  model_factory.h  model_util.cpp  model_util.h  yolov5s.cpp  yolov5s.h
include/model_backend/: backend_ncnn.cpp  backend_ncnn.h  blob.cpp  blob.h  model_backend.cpp  model_backend.h
include/nodes/: DetectNode.h  RTMPPushNode.h  RTSPNode.h  RTSPPullNode.h
src/: app.cpp  main.cpp  node_factory.cpp  yolov5_demo.cpp
src/apps/: detect_demo.cpp  rtsp_demo.cpp
src/nodes/: DetectNode.cpp  RTMPPushNode.cpp  RTSPNode.cpp  RTSPPullNode.cpp
